--- a/issue/0014.md
+++ b/issue/0014.md
@@ -1,9 +1,5 @@
-- todoの表示を日付ごとに分けたい
+- ListItemの表示を日付ごとに分けたい
     - 日付の枠が日数分並ぶ
         - 今日の日付から過去に遡って35日前まで
-    - その日付枠（「当該日」という）の中には以下の条件にあうtodoのみを表示する
-        - 通常のTodoの場合
-            - 当該日の前日以前に完了していないもの
-                - 完了時刻が当該日当日以降の場合は表示する
-        - カレンダーイベントの場合
-            - イベントの開始時刻が当該日のもの
+    - その日付枠の中には以下の条件にあうListItemのみを表示するようにする
+    - ただしその条件は後から実装するので、今は全てTrueになる関数を配置しておく
