--- a/issue/0026-カレンダーイベントが表示されない.md
+++ b/issue/0026-カレンダーイベントが表示されない.md
@@ -1,1 +1,3 @@
 - スケジュールイベントがstartTimeの日付の枠に表示されなくなっている
+    - 理由はstartTime, endTimeが想定される日時フォーマットになっているためのようです。
+    - このアプリでは時刻フォーマットは'YYYY-MM-DD HH:MI:SS'、タイムゾーンはJST、というのに統一しています。
