既存ボタンの削除

--- a/plan/0028-予定取得ボタンを日付ごとに.md
+++ b/plan/0028-予定取得ボタンを日付ごとに.md
@@ -50,9 +50,14 @@
 
 **変更内容:**
 - `DateGroupedTodoList`コンポーネントに`onImportCalendarEvents`プロパティを追加し、`importCalendarEvents`関数を渡します
+- **従来の「カレンダーから取得」ボタンと関連コードを削除**
+  - `isImportingCalendar`、`calendarError`のuseState削除
+  - `handleImportCalendar`関数削除
+  - ボタンUI削除、`input-header-buttons`のdiv要素削除
 
 **理由:**
 - View層の`DateGroupedTodoList`がController層の`importCalendarEvents`関数を呼び出せるようにするため
+- 日付枠ごとのボタンで機能が代替されるため、従来のボタンは不要
 
 **具体的な変更:**
 ```tsx
@@ -136,7 +141,14 @@ const handleImportForDate = async (date: string) => {
 )}
 ```
 
-5. CSSクラスの追加（`src/App.css`）:
+5. CSSクラスの変更（`src/App.css`）:
+
+**削除するスタイル:**
+- `.input-header-buttons`
+- `.calendar-import-button`および関連（`:hover:not(:disabled)`、`:disabled`）
+- `.calendar-error`および関連（`span`、`button`、`button:hover`）
+
+**追加するスタイル:**
 ```css
 .date-group-header-container {
   display: flex;
@@ -206,7 +218,9 @@ const handleImportForDate = async (date: string) => {
 
 ### 既存機能への影響
 
-- 画面上部の「カレンダーから取得」ボタンは残します（今日の予定を一括取得する便利機能として）
+- **画面上部の「カレンダーから取得」ボタンは廃止します**（日付枠ごとのボタンで代替）
+  - `App.tsx`から`handleImportCalendar`関数、`isImportingCalendar`、`calendarError`状態を削除
+  - `App.css`から`.calendar-import-button`、`.calendar-error`、`.input-header-buttons`スタイルを削除
 - 既存のIPC通信、Google Calendar API連携は変更不要です
 
 ### エラーハンドリング
@@ -239,12 +253,12 @@ const handleImportForDate = async (date: string) => {
 
 ## 変更ファイル一覧
 
-- `src/App.tsx`: propsの追加
+- `src/App.tsx`: props追加、従来のカレンダーボタンと関連コード削除
 - `src/components/DateGroupedTodoList.tsx`: ボタン追加とハンドラー実装
-- `src/App.css`: CSSスタイル追加
+- `src/App.css`: 従来のカレンダーボタン関連スタイル削除、日付枠ボタンスタイル追加
 
 ## 備考
 
 - 既存の実装が日付パラメータに対応済みだったため、View層のみの変更で済みます
-- 最小限の変更で要件を満たすことができます
+- 従来の「カレンダーから取得」ボタンは廃止し、日付枠ごとのボタンで代替します
 - MVCアーキテクチャに完全に準拠した実装です
